# projeto-sistemas-embarcados

./: README.md
etapa 1/: CMakeLists.txt
etapa 1/lib/: imu_tools.c  imu_tools.h  sensor_imu.c  sensor_imu.h
etapa 1/main/: main.c
etapa 2/: CMakeLists.txt  README.md
etapa 2/components/servo_hw/: servo_hw.c
etapa 2/components/servo_hw/include/: servo_hw.h
etapa 2/components/servo_tools/: servo_tools.c
etapa 2/components/servo_tools/include/: servo_tools.h
etapa 2/main/: CMakeLists.txt  main.c
etapa 3/: CMakeLists.txt  README.md
etapa 3/components/servo_hw/: servo_hw.c
etapa 3/main/: main.c
